# Flask-apps

./: LICENSE  README.md
crisisconnect/: .env  .env.example  config.py  pyproject.toml  setup.cfg  setup.py  tree.txt
crisisconnect/app/: __init__.py  config_loader.py  extensions.py  logging_config.py
crisisconnect/app/api/: errors.py
crisisconnect/app/api/v1/: __init__.py  alerts_api.py  community_api.py  households_api.py  kits_api.py  user_communities_api.py  users_api.py
crisisconnect/app/blueprints/admin/: __init__.py  alerts_routes.py  analytics_routes.py  community_routes.py  dashboard_routes.py  forms.py  households_routes.py  kits_routes.py  reports_routes.py  system_routes.py
crisisconnect/app/models/: __init__.py  alert.py  community.py  household.py  kit.py  user.py  user_community.py
crisisconnect/app/schemas/: __init__.py  alert_schema.py  community_schema.py  household_schema.py  kit_schema.py  user_community_schema.py  user_schema.py
crisisconnect/app/security/: decorators.py  hashing.py
crisisconnect/app/services/: alert_service.py  community_service.py  household_service.py  kit_service.py
crisisconnect/app/templates/: base.html  landing.html
crisisconnect/instance/: crisis_connect.db
crisisconnect/logs/: app.log.1  app.log.4
crisisconnect/migrations/: alembic.ini
crisisconnect/migrations/versions/: 352b787de6c3_add_role_column_to_users.py  496ffcc4857b_add_all_models_and_user_communities.py  85e2ed80844d_new_models.py  86c457b40496_initial_migration.py
crisisconnect/scripts/: create_admin.py
disaster_ready/: app.py  forms.py  (+4 more)
(+88 files in other folders)
