 [tool.poetry]
name = "crisisconnect"
version = "0.1.0"
description = "A disaster preparedness and response platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"  # For Alembic migrations
alembic = "^1.13.2"
marshmallow = "^3.22.0"  # For schemas
gunicorn = "^22.0.0"  # For production server
celery = "^5.4.0"  # For background tasks
redis = "^5.0.8"  # Celery backend (optional, can be swapped)
python-dotenv = "^1.0.1"  # For .env loading
pytest = "^8.3.2"  # For testing
factory-boy = "^3.3.1"  # For test factories
flask-wtf = "^1.2.2"
wtforms = "^3.2.1"
passlib = "^1.7.4"
email-validator = "^2.2.0"
flask-restx = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^24.8.0"  # Code formatter
flake8 = "^7.1.1"  # Linter

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
